testsuite/tests/parser/should_fail/pfail040.alan
hello() : proc
{
  if(!3)
    return;
}
