testsuite/tests/parser/should_fail/pfail040.stderr
pfail040.alan:3:8: Error: Parse error on input `)'

